Ensure updating bbl states in git
Signed-off-by: Rowan Jacobs <rojacobs@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -876,7 +876,7 @@ jobs:
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       input_mapping:
         env-repo: updated-env-repo
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -907,7 +907,7 @@ jobs:
         BBL_STATE_DIR: bbl-aws-cf
         BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
         BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1012,7 +1012,7 @@ jobs:
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
       input_mapping:
         env-repo: updated-env-repo
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1041,7 +1041,7 @@ jobs:
         BBL_IAAS: gcp
         BBL_STATE_DIR: bbl-lite-gcp
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1181,7 +1181,7 @@ jobs:
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
       input_mapping:
         env-repo: updated-env-repo
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1210,7 +1210,7 @@ jobs:
         BBL_IAAS: gcp
         BBL_STATE_DIR: bbl-gcp-cf
         BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      on_failure:
+      ensure:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
@@ -1253,7 +1253,7 @@ jobs:
         params:
           BBL_STATE_DIR: bbl-gcp-cf
           BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        on_failure:
+        ensure:
           put: infrastructure-ci-bbl-states
           params:
             rebase: true
