new stemcell task has this repo as input
Signed-off-by: Rowan Jacobs <rojacobs@pivotal.io>

--- a/scripts/bosh-bootloader/upload-latest-trusty-stemcell/task.yml
+++ b/scripts/bosh-bootloader/upload-latest-trusty-stemcell/task.yml
@@ -9,6 +9,7 @@ image_resource:
 
 inputs:
 - name: env-repo  # - The env repo containing the Director's bbl state dir
+- name: ci # - the repo containing this script
 
 run:
   path: ci/scripts/bosh-bootloader/upload-latest-trusty-stemcell/task
