Remove up-after-plan. Start adding back vsphere.
Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -205,16 +205,6 @@ jobs:
         BBL_TEST_ENV_ID_PREFIX: bbl-ci
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: plan
-    - task: up-after-plan
-      file: ci/scripts/bosh-bootloader/acceptance/task.yml
-      params:
-        BBL_IAAS: aws
-        BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-        BBL_AWS_REGION: {{aws_region}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
-        BBL_TEST_PACKAGES: bbl
-        RUN_TEST: up-after-plan
   - aggregate:
     - task: latest-error
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
@@ -283,18 +273,35 @@ jobs:
         BBL_TEST_ENV_ID_PREFIX: bbl-ci
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: plan
-    - task: up-after-plan
-      file: ci/scripts/bosh-bootloader/acceptance/task.yml
-      params:
-        BBL_IAAS: azure
-        BBL_AZURE_SUBSCRIPTION_ID: {{azure_subscription_id}}
-        BBL_AZURE_TENANT_ID: {{azure_tenant_id}}
-        BBL_AZURE_CLIENT_ID: {{azure_client_id}}
-        BBL_AZURE_CLIENT_SECRET: {{azure_client_secret}}
-        BBL_AZURE_REGION: {{azure_location}}
-        BBL_TEST_ENV_ID_PREFIX: bbl-ci
-        BBL_TEST_PACKAGES: bbl
-        RUN_TEST: up-after-plan
+
+# - name: vsphere-acceptance-tests
+#   serial: true
+#   plan:
+#   - aggregate:
+#     - get: bosh-bootloader
+#       passed: [test-bosh-bootloader]
+#       trigger: true
+#     - get: ci
+#       resource: infrastructure-ci
+#   - aggregate:
+#     - task: bbl-tests
+#       file: ci/scripts/bosh-bootloader/acceptance/task.yml
+#       params:
+#         BBL_IAAS: vsphere
+#         BBL_VSPHERE_NETWORK_NAME: {{vsphere_network_name}}
+#         BBL_VSPHERE_SUBNET: {{vsphere_subnet}}
+#         BBL_VSPHERE_VCENTER_IP: {{vsphere_vcenter_ip}}
+#         BBL_VSPHERE_VCENTER_USER: {{vsphere_vcenter_user}}
+#         BBL_VSPHERE_VCENTER_PASSWORD: {{vsphere_vcenter_password}}
+#         BBL_VSPHERE_VCENTER_DC: {{vsphere_vcenter_dc}}
+#         BBL_VSPHERE_VCENTER_CLUSTER: {{vsphere_vcenter_cluster}}
+#         BBL_VSPHERE_VCENTER_RP: {{vsphere_vcenter_rp}}
+#         BBL_VSPHERE_VCENTER_DS: {{vsphere_vcenter_ds}}
+#         BBL_VSPHERE_VCENTER_DISKS: {{vsphere_vcenter_disks}}
+#         BBL_VSPHERE_VCENTER_VMS: {{vsphere_vcenter_vms}}
+#         BBL_VSPHERE_VCENTER_TEMPLATES: {{vsphere_vcenter_templates}}
+#         BBL_TEST_ENV_ID_PREFIX: bbl-ci
+#         BBL_TEST_PACKAGES: bbl
 
 - name: gcp-acceptance-tests
   serial: true
