Pend releasable on bbl-lite-gcp.
Signed-off-by: Rowan Jacobs <rojacobs@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1225,6 +1225,7 @@ jobs:
       - bbl-gcp-cf
       - bbl-aws-concourse
       - bbl-gcp-concourse
+      - bbl-lite-gcp
 
 - name: github-release
   plan:
