--- a/dockerfiles/deployment/Dockerfile
+++ b/dockerfiles/deployment/Dockerfile
@@ -12,6 +12,7 @@ RUN \
             openssl \
             silversearcher-ag \
             unzip \
+            tree \
       && \
       apt-get clean
 
